--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
     "code-runner.executorMap": {
-        "cpp": "mkdir -p ../build && clang++ -std=c++17 $fileName -o ../build/$fileNameWithoutExtension && ../build/$fileNameWithoutExtension"
+        // windows系统用这行配置
+        "cpp": "cls && mkdir -p ../build && clang++ -std=c++17 $fileName -o ../build/$fileNameWithoutExtension && ../build/$fileNameWithoutExtension"
+        // mac系统用这行配置
+        // "cpp": "clear && mkdir -p ../build && clang++ -std=c++17 $fileName -o ../build/$fileNameWithoutExtension && ../build/$fileNameWithoutExtension"
     },
+    "code-runner.runInTerminal": true,
+    "code-runner.fileDirectoryAsCwd": true, 
+    "code-runner.clearPreviousOutput": true,
+    "terminal.integrated.shellIntegration.enabled": false,
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.intelliSenseEngine": "Tag Parser",
     "C_Cpp.intelliSenseEngineFallback": "Enabled",
