--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,26 +1,55 @@
 {
     "tasks": [
-      {
-        "type": "cppbuild",
-        "label": "C/C++: clang++ 生成活动文件",
-        "command": "/usr/bin/clang++",
-        "args": [
-          "-fcolor-diagnostics",
-          "-fansi-escape-codes",
-          "-g",
-          "-std=c++17",          // 明确 C++ 标准，避免兼容性问题
-          "${file}",
-          "-o",
-          "${fileDirname}/build/${fileBasenameNoExtension}"
-        ],
-        "options": {
-          "cwd": "${fileDirname}"
+        {
+            "type": "cppbuild",
+            "label": "C/C++: clang++ 生成活动文件 (Mac/Linux)",
+            "command": "/usr/bin/clang++",
+            "args": [
+                "-fcolor-diagnostics",
+                "-fansi-escape-codes",
+                "-g",
+                "-std=c++17",
+                "-Wall",
+                "-Wextra",
+                "-Werror",
+                "${file}",
+                "-o",
+                "${workspaceFolder}/build/${fileBasenameNoExtension}.out"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": ["$gcc"],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "适用于 Mac/Linux 的编译任务"
         },
-        "problemMatcher": ["$gcc"],
-        "group": "build",
-        "detail": "调试器生成的任务。"
-      }
+        {
+            "type": "cppbuild",
+            "label": "C/C++: clang++ 生成活动文件 (Windows)",
+            "command": "clang++",
+            "args": [
+                "-g",
+                "-std=c++17",
+                "-Wall",
+                "-Wextra",
+                "-Werror",
+                "${file}",
+                "-o",
+                "${workspaceFolder}\\build\\${fileBasenameNoExtension}.exe"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": ["$gcc"],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "适用于 Windows 的编译任务"
+        }
     ],
     "version": "2.0.0"
-  }
-  
+}
