--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
-build
+# 编译输出
+build/
+*.o
+*.obj
+*.exe
+*.out
+*.app
+*.dll
+*.so
+*.dylib
+
+# 编辑器临时文件
+.vscode/ipch/
+*.swp
+*~
 .DS_Store
+
+# 依赖项
+node_modules/
+vendor/
+
+# 其他临时文件
+.tmp/
+temp/
+.vs/
+.idea/
+__pycache__/
+*.py[cod]
+*$py.class
