--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,22 @@
 {
     "code-runner.executorMap": {
-        //windows
-        "cpp": "cls && g++ -std=c++17 $fileName -o ../build/$fileNameWithoutExt.exe && ../build/$fileNameWithoutExt.exe"
-        // "cpp": "cls && mkdir -p ../build && clang++ -std=c++17 $fileName -o ../build/$fileNameWithoutExt.exe && ../build/$fileNameWithoutExt.exe"
-        //mac
-        // "cpp": "clear && mkdir -p ../build && clang++ -std=c++17 $fileName -o ../build/$fileNameWithoutExt.out && ../build/$fileNameWithoutExt.out"
+        "cpp": ".vscode/platform-run.sh $fullFileName $fileNameWithoutExt"
+        // 如果第3行不起作用，使用以下直接命令（Mac用户）
+        // "cpp": "clear && clang++ -std=c++17 $fileName -o $fileNameWithoutExt.out && ./$fileNameWithoutExt.out && rm $fileNameWithoutExt.out"
+        // 如果第3行不起作用，使用以下直接命令（Windows用户）
+        // "cpp": "cls && g++ -std=c++17 $fileName -o $fileNameWithoutExt.exe && .\\$fileNameWithoutExt.exe"
     },
     "code-runner.runInTerminal": true,
-    "code-runner.fileDirectoryAsCwd": true, 
+    "code-runner.fileDirectoryAsCwd": false,
     "code-runner.clearPreviousOutput": true,
     "terminal.integrated.shellIntegration.enabled": false,
     "C_Cpp.errorSquiggles": "enabled",
-    "C_Cpp.intelliSenseEngine": "Tag Parser",
+    "C_Cpp.intelliSenseEngine": "default",
     "C_Cpp.intelliSenseEngineFallback": "Enabled",
+    "C_Cpp.formatting": "clangFormat",
+    "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, BreakBeforeBraces: Attach, ColumnLimit: 120  }",
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "ms-vscode.cpptools",
     "files.associations": {
         "iostream": "cpp",
         "vector": "cpp",
@@ -65,7 +69,11 @@
     "terminal.integrated.profiles.windows": {
         "PowerShell": {
             "source": "PowerShell",
-            "args": ["-NoExit", "/c", "chcp 65001"]
+            "args": [
+                "-NoExit",
+                "/c",
+                "chcp 65001"
+            ]
         }
     },
     "terminal.integrated.defaultProfile.windows": "PowerShell",
