--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "code-runner.executorMap": {
-        //"cpp": ".vscode/platform-run.sh $fullFileName $fileNameWithoutExt"
+        "cpp": ".vscode/platform-run.sh $fullFileName $fileNameWithoutExt"
         //如果第3行不起作用，使用以下直接命令（Windows用户）
-        "cpp": "cls && g++ -std=c++17 $fileName -o ../build/$fileNameWithoutExt.exe && ../build/$fileNameWithoutExt.exe"
+        //"cpp": "cls && g++ -std=c++17 $fileName -o ../build/$fileNameWithoutExt.exe && ../build/$fileNameWithoutExt.exe"
         //如果第3行不起作用，使用以下直接命令（Mac用户）
         //"cpp": "clear && mkdir -p ../build && clang++ -std=c++17 $fileName -o ../build/$fileNameWithoutExt.out && ../build/$fileNameWithoutExt.out"
     },
@@ -76,9 +76,12 @@
             ]
         }
     },
-    "terminal.integrated.defaultProfile.windows": "PowerShell",
+    // "terminal.integrated.defaultProfile.windows": "PowerShell",
     "terminal.integrated.env.windows": {
         "PYTHONIOENCODING": "utf-8",
         "PYTHONUTF8": "1"
-    }
+    },
+    "terminal.integrated.defaultProfile.windows": "Command Prompt",
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
+    "code-runner.terminalRoot": "${workspaceFolder}"
 }
